# ingo-gpu-challenge

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: multiplication_benchmark.rs
cuda/: mult.cu
src/: lib.rs
