[package]
name = "icicle-gpu-challenge"
version = "0.1.0"
edition = "2021"
authors = [ "Ingonyama" ]
description = "A challenge from the Ingonyama ICICLE team"
homepage = "https://www.ingonyama.com"
repository = "https://github.com/ingonyama-zk/ingo_gpu_challenge"

[[bench]]
name = "mult"
path = "benches/multiplication_benchmark.rs"
harness = false

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
rand = "*"

rustacuda = "0.1"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
"criterion" = "0.4.0"